--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
 
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.protocol=smtp
+spring.mail.username=lonevicky@gmail.com
+spring.mail.password=xznthgpfgdaeswss
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
